[metadata]
name = canmet-pycont
version = 2024.2.13.dev1
author = Mike Werezak
author_email = mike.werezak@nrcan-rncan.gc.ca
description = Driver for Tricontinental Pumps
long_description = file: README.md
long_description_content_type = text/markdown
url = 

[options]
python_requires = >=3.11
install_requires =
	pyserial~=3.5
package_dir =
packages = find:

[options.packages.find]
where =
include =
	pycont*

[options.package_data]
pycont = py.typed
